Fixed mentions of old repository

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container d-flex justify-content-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <strong>Unofficial New Relic dashboard repository</strong>
+                    <strong>New Relic Quickstarts</strong>
                 </a>
-                <a href="https://github.com/kidk/newrelic-dashboards" class="btn btn-light">Go to Github repository</a>
+                <a href="https://github.com/newrelic-experimental/quickstarts" class="btn btn-light">Go to Github repository</a>
             </div>
         </div>
     </header>
